--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,7 @@
             android:layout_height="48dp"
             android:id="@+id/quantity_increment"
             android:layout_marginLeft="16dp"
-            android:onClick="incrementQuantity"
-    />
+            android:onClick="incrementQuantity"/>
     <TextView
             android:text="2"
             android:layout_width="wrap_content"
@@ -29,7 +28,7 @@
             android:id="@+id/quantity_text_view"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            android:layout_marginLeft="16dp" />
+            android:layout_marginLeft="16dp"/>
     <Button
             android:text="-"
             android:layout_width="48dp"
@@ -44,14 +43,14 @@
             android:textAllCaps="true"
             android:layout_margin="16dp"/>
     <TextView
-            android:text="$0"
+            android:text="$10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/price_text_view"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:layout_marginLeft="16dp"
-            android:layout_marginBottom="16sp" />
+            android:layout_marginBottom="16sp"/>
     <Button
             android:text="Order"
             android:layout_width="wrap_content"
