--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,28 +14,33 @@
             android:text="Quantity"
             android:textAllCaps="true"
             android:layout_margin="16dp"/>
-    <Button
-            android:text="+"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:id="@+id/quantity_increment"
-            android:layout_marginLeft="16dp"
-            android:onClick="incrementQuantity"/>
-    <TextView
-            android:text="2"
+    <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/quantity_text_view"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:layout_marginLeft="16dp"/>
-    <Button
-            android:text="-"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:id="@+id/quantity_decrement"
-            android:layout_marginLeft="16dp"
-            android:onClick="decrementQuantity"/>
+            android:orientation="horizontal">
+        <Button
+                android:text="-"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/quantity_decrement"
+                android:onClick="decrementQuantity"/>
+        <TextView
+                android:text="2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/quantity_text_view"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"/>
+        <Button
+                android:text="+"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/quantity_increment"
+                android:onClick="incrementQuantity"/>
+    </LinearLayout>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
