--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,14 +44,14 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Price"
+            android:text="Order Summary"
             android:textAllCaps="true"
             android:layout_margin="16dp"/>
     <TextView
             android:text="$10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/price_text_view"
+            android:id="@+id/order_summary_text_view"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:layout_marginLeft="16dp"
