--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,28 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity"
         android:orientation="vertical">
-
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Toppings"
+            android:textAllCaps="true"
+            android:layout_margin="24dp"/>
+    <CheckBox
+            android:text="Whipped cream"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/checkBox"
+            android:textSize="16dp"
+            android:layout_marginLeft="24dp"
+            android:paddingLeft="16dp"
+            android:onClick="addWhippedCream"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quantity"
             android:textAllCaps="true"
-            android:layout_margin="16dp"/>
+            android:layout_margin="24dp"/>
+
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,7 +37,7 @@
                 android:text="-"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="24dp"
                 android:id="@+id/quantity_decrement"
                 android:onClick="decrementQuantity"/>
         <TextView
@@ -46,7 +61,7 @@
             android:layout_height="wrap_content"
             android:text="Order Summary"
             android:textAllCaps="true"
-            android:layout_margin="16dp"/>
+            android:layout_margin="24dp"/>
     <TextView
             android:text="$10"
             android:layout_width="wrap_content"
@@ -54,14 +69,14 @@
             android:id="@+id/order_summary_text_view"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="24dp"
             android:layout_marginBottom="16sp"/>
     <Button
             android:text="Order"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="24dp"
             android:onClick="submitOrder"/>
 
 </LinearLayout>
