--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:text="Whipped cream"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/checkBox"
+            android:id="@+id/whipped_cream_checkbox"
             android:textSize="16dp"
             android:layout_marginLeft="24dp"
             android:paddingLeft="16dp"
