--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,82 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:orientation="vertical">
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Toppings"
-            android:textAllCaps="true"
-            android:layout_margin="24dp"/>
-    <CheckBox
-            android:text="Whipped cream"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/whipped_cream_checkbox"
-            android:textSize="16dp"
-            android:layout_marginLeft="24dp"
-            android:paddingLeft="16dp"
-            android:onClick="addWhippedCream"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Quantity"
-            android:textAllCaps="true"
-            android:layout_margin="24dp"/>
-
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        tools:context=".MainActivity">
     <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        <Button
-                android:text="-"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginLeft="24dp"
-                android:id="@+id/quantity_decrement"
-                android:onClick="decrementQuantity"/>
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity"
+            android:orientation="vertical">
         <TextView
-                android:text="2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/quantity_text_view"
+                android:text="Toppings"
+                android:textAllCaps="true"
+                android:layout_margin="24dp"/>
+        <CheckBox
+                android:text="Whipped cream"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/whipped_cream_checkbox"
+                android:textSize="16dp"
+                android:layout_marginLeft="24dp"
+                android:paddingLeft="16dp"
+                android:onClick="addWhippedCream"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quantity"
+                android:textAllCaps="true"
+                android:layout_margin="24dp"/>
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <Button
+                    android:text="-"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginLeft="24dp"
+                    android:id="@+id/quantity_decrement"
+                    android:onClick="decrementQuantity"/>
+            <TextView
+                    android:text="2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/quantity_text_view"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="8dp"/>
+            <Button
+                    android:text="+"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:id="@+id/quantity_increment"
+                    android:onClick="incrementQuantity"/>
+        </LinearLayout>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Order Summary"
+                android:textAllCaps="true"
+                android:layout_margin="24dp"/>
+        <TextView
+                android:text="$10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/order_summary_text_view"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
-                android:layout_marginRight="8dp"
-                android:layout_marginLeft="8dp"/>
+                android:layout_marginLeft="24dp"
+                android:layout_marginBottom="16sp"/>
         <Button
-                android:text="+"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:id="@+id/quantity_increment"
-                android:onClick="incrementQuantity"/>
+                android:text="Order"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button"
+                android:layout_marginLeft="24dp"
+                android:onClick="submitOrder"/>
     </LinearLayout>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Order Summary"
-            android:textAllCaps="true"
-            android:layout_margin="24dp"/>
-    <TextView
-            android:text="$10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/order_summary_text_view"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginBottom="16sp"/>
-    <Button
-            android:text="Order"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button"
-            android:layout_marginLeft="24dp"
-            android:onClick="submitOrder"/>
-
-</LinearLayout>
+</ScrollView>
