--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/whipped_cream_checkbox"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:layout_marginLeft="24dp"
                 android:paddingLeft="16dp"
                 android:onClick="addWhippedCream"/>
+        <CheckBox
+                android:text="Chocolate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/chocolate_checkbox"
+                android:textSize="16sp"
+                android:layout_marginLeft="24dp"
+                android:paddingLeft="16dp"
+                android:onClick="addChocolate"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
