--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,27 +80,12 @@
                     android:id="@+id/quantity_increment"
                     android:onClick="incrementQuantity"/>
         </LinearLayout>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Order Summary"
-                android:textAllCaps="true"
-                android:layout_margin="24dp"/>
-        <TextView
-                android:text="$10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/order_summary_text_view"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginBottom="16sp"/>
         <Button
                 android:text="Order"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/button"
-                android:layout_marginLeft="24dp"
+                android:layout_margin="24dp"
                 android:onClick="submitOrder"/>
     </LinearLayout>
 </ScrollView>
