--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,18 +18,19 @@
             <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Name"
+                    android:hint="@string/name"
                     android:inputType="textCapWords"
                     android:id="@+id/name_input"/>
         </com.google.android.material.textfield.TextInputLayout>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Toppings"
+                android:text="@string/toppings"
                 android:textAllCaps="true"
-                android:layout_margin="24dp"/>
+                android:layout_marginLeft="24dp"
+                android:layout_marginBottom="24dp"/>
         <CheckBox
-                android:text="Whipped cream"
+                android:text="@string/whipped_cream"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/whipped_cream_checkbox"
@@ -38,7 +39,7 @@
                 android:paddingLeft="16dp"
                 android:onClick="addWhippedCream"/>
         <CheckBox
-                android:text="Chocolate"
+                android:text="@string/chocolate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/chocolate_checkbox"
@@ -49,7 +50,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Quantity"
+                android:text="@string/quantity"
                 android:textAllCaps="true"
                 android:layout_margin="24dp"/>
 
@@ -81,7 +82,7 @@
                     android:onClick="incrementQuantity"/>
         </LinearLayout>
         <Button
-                android:text="Order"
+                android:text="@string/order"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/button"
