--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,10 @@
                     android:id="@+id/name_input"/>
         </com.google.android.material.textfield.TextInputLayout>
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/toppings"
-                android:textAllCaps="true"
                 android:layout_marginLeft="24dp"
-                android:layout_marginBottom="24dp"/>
+                android:layout_marginBottom="24dp"
+                style="@style/HeaderTextStyle"/>
         <CheckBox
                 android:text="@string/whipped_cream"
                 android:layout_width="match_parent"
@@ -48,11 +46,9 @@
                 android:paddingLeft="16dp"
                 android:onClick="addChocolate"/>
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/quantity"
-                android:textAllCaps="true"
-                android:layout_margin="24dp"/>
+                android:layout_margin="24dp"
+                style="@style/HeaderTextStyle"/>
 
         <LinearLayout
                 android:layout_width="wrap_content"
@@ -67,13 +63,12 @@
                     android:onClick="decrementQuantity"/>
             <TextView
                     android:text="2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:id="@+id/quantity_text_view"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginLeft="8dp"/>
+                    android:layout_marginLeft="8dp"
+                    style="@style/HeaderTextStyle"/>
             <Button
                     android:text="+"
                     android:layout_width="48dp"
