--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,12 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <!-- App branding color for the app bar -->
+        <item name="colorPrimary">#c2185b</item>
+        <!-- Darker variant for the status bar and contextual app bars -->
+        <item name="colorPrimaryDark">#8c0032</item>
+        <!-- Theme UI controls like checkboxes and text fields -->
+        <item name="colorAccent">#fa5788</item>
     </style>
 
     <style name="HeaderTextStyle" parent="Theme.AppCompat.Light.DarkActionBar">
